--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -16,7 +16,17 @@ ol, ul {
 .status {
   margin-bottom: 10px;
 }
-
+.btn {
+  color: #444444;
+  background: #F3F3F3;
+  border: 1px #DADADA solid;
+  padding: 5px 10px;
+  border-radius: 2px;
+  font-weight: bold;
+  font-size: 9pt;
+  outline: none;
+  margin: 0.4rem;
+}
 .square {
   background: #fff;
   border: 1px solid #999;
