--- a/flexbox/src/App.css
+++ b/flexbox/src/App.css
@@ -2,5 +2,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  
+  height: 100vh;
+  width: 100%;
+}
+
+.calc-wrapper {
+  width: 400px;
+  height: 600px;
+}
+
+.row {
+  display: flex;
+  width: 100%;
 }
