--- a/flexbox/src/components/Buttons.css
+++ b/flexbox/src/components/Buttons.css
@@ -9,6 +9,11 @@
     color: #888;
     flex: 1;
     outline: 1px solid #888;
+
+}
+
+.button-wrapper:hover {
+    cursor: pointer;
 }
 
 .operator {
