--- a/flexbox/src/components/ClearButton.css
+++ b/flexbox/src/components/ClearButton.css
@@ -4,4 +4,9 @@
     justify-content: center;
     align-items: center;
     font-weight: lighter;
+    font-size: 1.4em;
+    background-color: #d5c7d8;
+    color: #000000;
+    outline: 1px solid #888888;
+    flex: 1;
 }
