--- a/iphone/src/components/App/App.css
+++ b/iphone/src/components/App/App.css
@@ -1,8 +1,13 @@
 .app {
-    width: 563px;
-    height: 1218px;
+    width: 320px;
+    height: 568px;
     background-color: black;
     color: white;
-    border-radius: 30px;
+    border-radius: 10px;
     margin: 2rem;
+}
+
+.top {
+    height: 250px;
+    padding: 0 20px;
 }
